2012-05-04 Nikolay Nemshilov

  * Version 1.1.0
  * Modal now bypasses the #html and #text methods as well
  * Modal now fires the show/hide events automatically
  * Modal now automatically sets the internal element max sizes
  * Icons/Buttons better CSS styling

2012-03-25 Nikolay Nemshilov

  * Version 1.0.1 release
  * Icons fix for the next/prev buttons
  * Disabling the user-select event on icons and buttons
  * Adding the `lui-disabled` class for icons and buttons

2012-03-24 Nikolay Nemshilov

  * Version 1.0.0 release