@@ -18,7 +18,8 @@
           new UI.Spinner({size: 3}).insertTo('#spinners-demo');
           new UI.Spinner({size: 8, 'class': 'green'}).insertTo('#spinners-demo');
 
-          new UI.Locker().insertTo('#locker-demo')
+          new UI.Locker().insertTo('#locker-demo');
+          new UI.Locker({size: 6}).insertTo('#tight-space-locker');
 
           $('#modal-demo1').on('click', function(event) { event.stop();
             new UI.Modal({html: "HTML Hello World!"}).show();
@@ -54,6 +55,11 @@
       #locker-demo {
         position: relative;
         width: 40em;
+      }
+      #tight-space-locker {
+        position: relative;
+        width:    5em;
+        height:   5em;
       }
       div.lui-modal div.lui-inner {
         background: pink;
@@ -150,6 +156,13 @@
         <p>
           No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum
         </p>
+      </div>
+    </p>
+
+    <h2>Tight Space Locker</h2>
+    <p>
+      <div id="tight-space-locker">
+        Boo hoo
       </div>
     </p>
 
