@@ -5,6 +5,7 @@
   * Modal now fires the show/hide events automatically
   * Modal now automatically sets the internal element max sizes
   * Icons/Buttons better CSS styling
+  * Better looking Spinner element
 
 2012-03-25 Nikolay Nemshilov
 
